Deprecate @VisibleForTesting for removal
Remove usage of @VisibleForTesting or comment it when removing usage is not straightforward

Fix #3755