@@ -84,10 +84,7 @@ import java.io.StringReader;
 import java.io.UncheckedIOException;
 import java.text.Normalizer;
 import java.util.Base64;
-import java.util.Collections;
-import java.util.Comparator;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.Map;
@@ -95,8 +92,8 @@ import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+
 import org.assertj.core.api.AssertionInfo;
-import org.assertj.core.util.VisibleForTesting;
 
 /**
  * @author Alex Ruiz
@@ -107,42 +104,19 @@ import org.assertj.core.util.VisibleForTesting;
  */
 public class Strings {
 
-  private static final Set<Character> NON_BREAKING_SPACES;
-
-  static {
-    Set<Character> nonBreakingSpaces = new HashSet<>();
-    nonBreakingSpaces.add('\u00A0');
-    nonBreakingSpaces.add('\u2007');
-    nonBreakingSpaces.add('\u202F');
-    NON_BREAKING_SPACES = Collections.unmodifiableSet(nonBreakingSpaces);
-  }
-
+  private static final Set<Character> NON_BREAKING_SPACES = Set.of('\u00A0', '\u2007', '\u202F');
   private static final String EMPTY_STRING = "";
-  private static final Strings INSTANCE = new Strings();
+  private static final Strings INSTANCE = new Strings(StandardComparisonStrategy.instance());
   private static final String PUNCTUATION_REGEX = "\\p{Punct}";
   private final ComparisonStrategy comparisonStrategy;
-  @VisibleForTesting
-  Failures failures = Failures.instance();
+  private final Failures failures = Failures.instance();
 
   public static Strings instance() {
     return INSTANCE;
   }
 
-  @VisibleForTesting
-  Strings() {
-    this(StandardComparisonStrategy.instance());
-  }
-
   public Strings(ComparisonStrategy comparisonStrategy) {
     this.comparisonStrategy = comparisonStrategy;
-  }
-
-  @VisibleForTesting
-  public Comparator<?> getComparator() {
-    if (comparisonStrategy instanceof ComparatorBasedComparisonStrategy strategy) {
-      return strategy.getComparator();
-    }
-    return null;
   }
 
   public void assertNullOrEmpty(AssertionInfo info, CharSequence actual) {
